--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id ="game" style = "display: none;">
 <h1 id="word"></h1>
 <h2>Hint: <span id="hint"></span></h2>
-<button id ="startOver" onclick="newGame()">Start over</button>
+<button id ="startOver" onclick="newGame()">New Game</button>
 <img id="pic" width="500">
 <div id = "stats">
     <p>Letters Guessed: <span id="lettersGuessed"></span></p>
